# django_timer_app

./: README.md  db.sqlite3  main.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
accounts/: urls.py  views.py
config/: settings.py  urls.py
templates/: base.html
templates/accounts/: login.html  register.html
templates/timers/: dashboard.html
templates/timers/partials/: lap_list.html  timer_card.html  timer_display.html
timers/: models.py  urls.py  views.py
timers/migrations/: 0001_initial.py
